@@ -15,6 +15,7 @@
    - Unicode error when searching for data sets on disk (#218)
    - Unicode error when performing LMM analysis on some setups (#217)
    - IndexError when obtaining meta data from previous, broken analysis
+   - KeyError when starting a new analysis with unavailable plotting axes
 0.8.5
  - Update plotting range when switching to log scale (#198)
  - Allow to fix plotting range to retain previous behavior (#198)
